--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json}\""
   },
   "dependencies": {
-    "next": "15.1.7",
+    "next": "^15.2.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
