--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^19.1.0",
     "remark": "^15.0.1",
     "remark-class-names": "^0.1.0",
-    "remark-html": "^16.0.1"
+    "remark-html": "^16.0.1",
+    "unified": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
