--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css}\""
   },
   "dependencies": {
+    "gray-matter": "^4.0.3",
     "next": "^15.3.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "remark": "^15.0.1",
+    "remark-class-names": "^0.1.0",
+    "remark-html": "^16.0.1",
+    "unified": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
